grammar/.antlr/CWScriptParser.java
// Generated from /Users/william/IdeaProjects/cwsc-x/grammar/CWScriptParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CWScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONTRACT=1, INTERFACE=2, IMPORT=3, IMPLEMENTS=4, EXTENDS=5, ERROR=6, EVENT=7, 
		INSTANTIATE_NOW=8, EXEC_NOW=9, QUERY_NOW=10, DELEGATE_EXEC=11, INSTANTIATE=12, 
		EXEC=13, QUERY=14, REPLY=15, FOR=16, IN=17, FROM=18, STATE=19, IF=20, 
		IS=21, TRY=22, CATCH=23, ELSE=24, NOT=25, NONE=26, MUT=27, AND=28, OR=29, 
		TRUE=30, FALSE=31, FN=32, LET=33, CONST=34, FAIL=35, RETURN=36, STRUCT=37, 
		ENUM=38, TYPE=39, EMIT=40, AS=41, TILDE=42, LPAREN=43, RPAREN=44, LBRACK=45, 
		RBRACK=46, LBRACE=47, RBRACE=48, DOT=49, COMMA=50, D_QUEST=51, QUEST=52, 
		BANG=53, COLON=54, D_COLON=55, HASH=56, AT=57, AMP=58, ARROW=59, FAT_ARROW=60, 
		BAR=61, S_QUOTE=62, D_QUOTE=63, EQ=64, EQ_EQ=65, NEQ=66, PLUS=67, PLUS_EQ=68, 
		MINUS=69, MINUS_EQ=70, MUL=71, MUL_EQ=72, DIV=73, DIV_EQ=74, MOD=75, MOD_EQ=76, 
		LT=77, LT_EQ=78, GT=79, GT_EQ=80, POW=81, Ident=82, StringLiteral=83, 
		IntLiteral=84, DecLiteral=85, BoolLiteral=86, CWSPEC_LINE_COMMENT=87, 
		CWSPEC_BLOCK_COMMENT=88, LINE_COMMENT=89, BLOCK_COMMENT=90, WS=91;
	public static final int
		RULE_sourceFile = 0, RULE_topLevelStmt = 1, RULE_contractDefn = 2, RULE_interfaceDefn = 3, 
		RULE_contractBlock = 4, RULE_importStmt = 5, RULE_contractItem = 6, RULE_param = 7, 
		RULE_paramList = 8, RULE_stateParam = 9, RULE_fnParams = 10, RULE_structDefn_fn = 11, 
		RULE_errorDefn = 12, RULE_errorDefnBlock = 13, RULE_eventDefn = 14, RULE_eventDefnBlock = 15, 
		RULE_stateDefnBlock = 16, RULE_stateDefn_item = 17, RULE_mapKeyDefn = 18, 
		RULE_instantiateDefn = 19, RULE_instantiateDecl = 20, RULE_execDefn = 21, 
		RULE_execDecl = 22, RULE_queryDefn = 23, RULE_queryDecl = 24, RULE_replyDefn = 25, 
		RULE_enumDefn = 26, RULE_variant_ = 27, RULE_variant_struct = 28, RULE_variant_unit = 29, 
		RULE_typeExpr = 30, RULE_typePath = 31, RULE_typeVariant = 32, RULE_typeDefn = 33, 
		RULE_structDefn = 34, RULE_typeAliasDefn = 35, RULE_fnDefn = 36, RULE_annot = 37, 
		RULE_callOpts = 38, RULE_stmt = 39, RULE_letStmt_ = 40, RULE_constStmt_ = 41, 
		RULE_let_binding = 42, RULE_assignStmt_ = 43, RULE_assignLHS_ = 44, RULE_expr = 45, 
		RULE_closureParams = 46, RULE_closure = 47, RULE_block = 48, RULE_tryCatchElseExpr_ = 49, 
		RULE_catchClause = 50, RULE_arg = 51, RULE_memberVal = 52, RULE_literal = 53, 
		RULE_ifStmt_ = 54, RULE_elseClause = 55, RULE_forStmt_ = 56, RULE_ident = 57, 
		RULE_reservedKeyword = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"sourceFile", "topLevelStmt", "contractDefn", "interfaceDefn", "contractBlock", 
			"importStmt", "contractItem", "param", "paramList", "stateParam", "fnParams", 
			"structDefn_fn", "errorDefn", "errorDefnBlock", "eventDefn", "eventDefnBlock", 
			"stateDefnBlock", "stateDefn_item", "mapKeyDefn", "instantiateDefn", 
			"instantiateDecl", "execDefn", "execDecl", "queryDefn", "queryDecl", 
			"replyDefn", "enumDefn", "variant_", "variant_struct", "variant_unit", 
			"typeExpr", "typePath", "typeVariant", "typeDefn", "structDefn", "typeAliasDefn", 
			"fnDefn", "annot", "callOpts", "stmt", "letStmt_", "constStmt_", "let_binding", 
			"assignStmt_", "assignLHS_", "expr", "closureParams", "closure", "block", 
			"tryCatchElseExpr_", "catchClause", "arg", "memberVal", "literal", "ifStmt_", 
			"elseClause", "forStmt_", "ident", "reservedKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'contract'", "'interface'", "'import'", "'implements'", "'extends'", 
			"'error'", "'event'", "'instantiate!'", "'exec!'", "'query!'", "'delegate_exec!'", 
			"'instantiate'", "'exec'", "'query'", "'reply'", "'for'", "'in'", "'from'", 
			"'state'", "'if'", "'is'", "'try'", "'catch'", "'else'", "'not'", "'None'", 
			"'mut'", "'and'", "'or'", "'true'", "'false'", "'fn'", "'let'", "'const'", 
			"'fail!'", "'return'", "'struct'", "'enum'", "'type'", "'emit'", "'as'", 
			"'~'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "'??'", 
			"'?'", "'!'", "':'", "'::'", "'#'", "'@'", "'&'", "'->'", "'=>'", "'|'", 
			"'''", "'\"'", "'='", "'=='", "'!='", "'+'", "'+='", "'-'", "'-='", "'*'", 
			"'*='", "'/'", "'/='", "'%'", "'%='", "'<'", "'<='", "'>'", "'>='", "'**'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONTRACT", "INTERFACE", "IMPORT", "IMPLEMENTS", "EXTENDS", "ERROR", 
			"EVENT", "INSTANTIATE_NOW", "EXEC_NOW", "QUERY_NOW", "DELEGATE_EXEC", 
			"INSTANTIATE", "EXEC", "QUERY", "REPLY", "FOR", "IN", "FROM", "STATE", 
			"IF", "IS", "TRY", "CATCH", "ELSE", "NOT", "NONE", "MUT", "AND", "OR", 
			"TRUE", "FALSE", "FN", "LET", "CONST", "FAIL", "RETURN", "STRUCT", "ENUM", 
			"TYPE", "EMIT", "AS", "TILDE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"LBRACE", "RBRACE", "DOT", "COMMA", "D_QUEST", "QUEST", "BANG", "COLON", 
			"D_COLON", "HASH", "AT", "AMP", "ARROW", "FAT_ARROW", "BAR", "S_QUOTE", 
			"D_QUOTE", "EQ", "EQ_EQ", "NEQ", "PLUS", "PLUS_EQ", "MINUS", "MINUS_EQ", 
			"MUL", "MUL_EQ", "DIV", "DIV_EQ", "MOD", "MOD_EQ", "LT", "LT_EQ", "GT", 
			"GT_EQ", "POW", "Ident", "StringLiteral", "IntLiteral", "DecLiteral", 
			"BoolLiteral", "CWSPEC_LINE_COMMENT", "CWSPEC_BLOCK_COMMENT", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CWScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CWScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CWScriptParser.EOF, 0); }
		public List<TopLevelStmtContext> topLevelStmt() {
			return getRuleContexts(TopLevelStmtContext.class);
		}
		public TopLevelStmtContext topLevelStmt(int i) {
			return getRuleContext(TopLevelStmtContext.class,i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFile; }
	}

	public final SourceFileContext sourceFile() throws RecognitionException {
		SourceFileContext _localctx = new SourceFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONTRACT) | (1L << INTERFACE) | (1L << IMPORT) | (1L << CONST))) != 0)) {
				{
				{
				setState(118);
				topLevelStmt();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelStmtContext extends ParserRuleContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public ContractDefnContext contractDefn() {
			return getRuleContext(ContractDefnContext.class,0);
		}
		public InterfaceDefnContext interfaceDefn() {
			return getRuleContext(InterfaceDefnContext.class,0);
		}
		public ConstStmt_Context constStmt_() {
			return getRuleContext(ConstStmt_Context.class,0);
		}
		public TopLevelStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStmt; }
	}

	public final TopLevelStmtContext topLevelStmt() throws RecognitionException {
		TopLevelStmtContext _localctx = new TopLevelStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStmt);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				importStmt();
				}
				break;
			case CONTRACT:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				contractDefn();
				}
				break;
			case INTERFACE:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				interfaceDefn();
				}
				break;
			case CONST:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				constStmt_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContractDefnContext extends ParserRuleContext {
		public IdentContext name;
		public TypePathContext base;
		public TypePathContext typePath;
		public List<TypePathContext> interfaces = new ArrayList<TypePathContext>();
		public ContractBlockContext body;
		public TerminalNode CONTRACT() { return getToken(CWScriptParser.CONTRACT, 0); }
		public ContractBlockContext contractBlock() {
			return getRuleContext(ContractBlockContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(CWScriptParser.EXTENDS, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(CWScriptParser.IMPLEMENTS, 0); }
		public List<TypePathContext> typePath() {
			return getRuleContexts(TypePathContext.class);
		}
		public TypePathContext typePath(int i) {
			return getRuleContext(TypePathContext.class,i);
		}
		public ContractDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractDefn; }
	}

	public final ContractDefnContext contractDefn() throws RecognitionException {
		ContractDefnContext _localctx = new ContractDefnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_contractDefn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(CONTRACT);
			{
			setState(133);
			((ContractDefnContext)_localctx).name = ident();
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(134);
				match(EXTENDS);
				{
				setState(135);
				((ContractDefnContext)_localctx).base = typePath();
				}
				}
			}

			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(138);
				match(IMPLEMENTS);
				{
				setState(139);
				((ContractDefnContext)_localctx).typePath = typePath();
				((ContractDefnContext)_localctx).interfaces.add(((ContractDefnContext)_localctx).typePath);
				}
				}
			}

			setState(142);
			((ContractDefnContext)_localctx).body = contractBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceDefnContext extends ParserRuleContext {
		public IdentContext name;
		public TypePathContext base;
		public ContractBlockContext body;
		public TerminalNode INTERFACE() { return getToken(CWScriptParser.INTERFACE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(CWScriptParser.EXTENDS, 0); }
		public ContractBlockContext contractBlock() {
			return getRuleContext(ContractBlockContext.class,0);
		}
		public TypePathContext typePath() {
			return getRuleContext(TypePathContext.class,0);
		}
		public InterfaceDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDefn; }
	}

	public final InterfaceDefnContext interfaceDefn() throws RecognitionException {
		InterfaceDefnContext _localctx = new InterfaceDefnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interfaceDefn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(INTERFACE);
			{
			setState(145);
			((InterfaceDefnContext)_localctx).name = ident();
			}
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(146);
				match(EXTENDS);
				{
				setState(147);
				((InterfaceDefnContext)_localctx).base = typePath();
				}
				}
			}

			{
			setState(150);
			((InterfaceDefnContext)_localctx).body = contractBlock();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContractBlockContext extends ParserRuleContext {
		public ContractItemContext contractItem;
		public List<ContractItemContext> body = new ArrayList<ContractItemContext>();
		public TerminalNode LBRACE() { return getToken(CWScriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CWScriptParser.RBRACE, 0); }
		public List<ContractItemContext> contractItem() {
			return getRuleContexts(ContractItemContext.class);
		}
		public ContractItemContext contractItem(int i) {
			return getRuleContext(ContractItemContext.class,i);
		}
		public ContractBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractBlock; }
	}

	public final ContractBlockContext contractBlock() throws RecognitionException {
		ContractBlockContext _localctx = new ContractBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contractBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(LBRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ERROR) | (1L << EVENT) | (1L << EXEC) | (1L << QUERY) | (1L << REPLY) | (1L << STATE) | (1L << FN) | (1L << CONST) | (1L << STRUCT) | (1L << ENUM) | (1L << TYPE) | (1L << HASH))) != 0)) {
				{
				{
				setState(153);
				((ContractBlockContext)_localctx).contractItem = contractItem();
				((ContractBlockContext)_localctx).body.add(((ContractBlockContext)_localctx).contractItem);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStmtContext extends ParserRuleContext {
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
	 
		public ImportStmtContext() { }
		public void copyFrom(ImportStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportItemsStmtContext extends ImportStmtContext {
		public IdentContext ident;
		public List<IdentContext> items = new ArrayList<IdentContext>();
		public Token src;
		public TerminalNode IMPORT() { return getToken(CWScriptParser.IMPORT, 0); }
		public TerminalNode FROM() { return getToken(CWScriptParser.FROM, 0); }
		public TerminalNode StringLiteral() { return getToken(CWScriptParser.StringLiteral, 0); }
		public TerminalNode LBRACE() { return getToken(CWScriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CWScriptParser.RBRACE, 0); }
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CWScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CWScriptParser.COMMA, i);
		}
		public ImportItemsStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
	}
	public static class ImportAllStmtContext extends ImportStmtContext {
		public Token src;
		public TerminalNode IMPORT() { return getToken(CWScriptParser.IMPORT, 0); }
		public TerminalNode MUL() { return getToken(CWScriptParser.MUL, 0); }
		public TerminalNode FROM() { return getToken(CWScriptParser.FROM, 0); }
		public TerminalNode StringLiteral() { return getToken(CWScriptParser.StringLiteral, 0); }
		public ImportAllStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importStmt);
		int _la;
		try {
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new ImportAllStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(IMPORT);
				setState(162);
				match(MUL);
				setState(163);
				match(FROM);
				{
				setState(164);
				((ImportAllStmtContext)_localctx).src = match(StringLiteral);
				}
				}
				break;
			case 2:
				_localctx = new ImportItemsStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				match(IMPORT);
				{
				{
				setState(166);
				match(LBRACE);
				{
				setState(167);
				((ImportItemsStmtContext)_localctx).ident = ident();
				((ImportItemsStmtContext)_localctx).items.add(((ImportItemsStmtContext)_localctx).ident);
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(168);
					match(COMMA);
					setState(169);
					((ImportItemsStmtContext)_localctx).ident = ident();
					((ImportItemsStmtContext)_localctx).items.add(((ImportItemsStmtContext)_localctx).ident);
					}
					}
					setState(174);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(175);
				match(RBRACE);
				}
				}
				setState(177);
				match(FROM);
				{
				setState(178);
				((ImportItemsStmtContext)_localctx).src = match(StringLiteral);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
